log
Sat 27 Apr 2024 06:59:28 PM UTC: 
 tests:  0|6
total_score: 0/70
3d0c716
Sat 27 Apr 2024 07:01:39 PM UTC: 
 hashmap.c | 112 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 105 insertions(+), 7 deletions(-)
 tests:  0|0
e2d0dd5
Sat 27 Apr 2024 07:04:56 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
bc19095
Sat 27 Apr 2024 07:07:07 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
b85c97e
Sat 27 Apr 2024 07:09:19 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
900c426
Sat 27 Apr 2024 07:17:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
545c50c
Sat 27 Apr 2024 07:19:15 PM UTC: 
 hashmap.c | 26 ++++++--------------------
 1 file changed, 6 insertions(+), 20 deletions(-)
 tests:  0|0
5b04ffd
Sat 27 Apr 2024 07:22:00 PM UTC: 
 hashmap.c | 26 ++++++++++++++++++++------
 1 file changed, 20 insertions(+), 6 deletions(-)
 tests:  0|0
e45dca7
Sat 27 Apr 2024 07:23:56 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:72:21: error: initialization of ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   72 |   Pair **hash_map = (Pair *)malloc(sizeof(Pair) * nueva_capacidad);
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
271683e
Sat 27 Apr 2024 07:24:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:72:22: error: initialization of ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   72 |   Pair ** hash_map = (Pair *)malloc(sizeof(Pair*) * nueva_capacidad);
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
80b2a87
Sat 27 Apr 2024 07:24:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
4faadb8
Sat 27 Apr 2024 07:36:38 PM UTC: 
 hashmap.c | 34 +++++++++++++++++++---------------
 1 file changed, 19 insertions(+), 15 deletions(-)
 tests:  7|4
total_score: 30/70
199dc97
Sat 27 Apr 2024 07:38:36 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
9fb1e41
Sat 27 Apr 2024 07:38:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
d27c2e8
Sat 27 Apr 2024 07:41:29 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  8|3
total_score: 40/70
1c65e15
Sat 27 Apr 2024 07:43:01 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  8|3
total_score: 40/70
48dcdf9
Sat 27 Apr 2024 10:53:30 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
abf0763
Sat 27 Apr 2024 10:54:39 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
6a04960
Sat 27 Apr 2024 10:59:28 PM UTC: 
 hashmap.c | 17 ++++++++---------
 1 file changed, 8 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:134:22: error: ‘Pair’ has no member named ‘next’
  134 |     current = current->next;
      |                      ^~
hashmap.c:126:10: error: variable ‘prev’ set but not used [-Werror=unused-but-set-variable]
  126 |   Pair * prev = NULL;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
2a5e9fd
Sat 27 Apr 2024 11:01:49 PM UTC: 
 hashmap.c | 38 +++++++++++++++++++-------------------
 1 file changed, 19 insertions(+), 19 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:144:10: error: variable ‘prev’ set but not used [-Werror=unused-but-set-variable]
  144 |   Pair * prev = NULL;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
9174a35
Sat 27 Apr 2024 11:02:02 PM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  9|3
total_score: 40/70
f44f062
Sat 27 Apr 2024 11:07:20 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 40/70
cbd9cd7
Sat 27 Apr 2024 11:07:25 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 40/70
c209944
Sat 27 Apr 2024 11:08:37 PM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 40/70
6a5fa19
